<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/priceInput"
        android:layout_height="64dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_price"
        android:inputType="number"
        android:maxLines="1"
 />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/done"
            android:layout_height="48dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/done" />

    </LinearLayout>


</LinearLayout>