<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.hp.scissorsshop.UI.ShopRegistration">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shopName"
                android:gravity="center"
                android:hint="@string/shop_name"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shopAddress"
                android:gravity="center"
                android:hint="@string/shop_address"
                android:layout_marginBottom="32dp"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shopType"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:theme="@android:style/Theme.Holo.Light"
                >
            </Spinner>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shopSex"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:theme="@android:style/Theme.Holo.Light"
                >
            </Spinner>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/registerShop"
                android:onClick="requestShopRegister"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
